--- a/docs/thesis/macroeconomics.tex
+++ b/docs/thesis/macroeconomics.tex
@@ -1,12 +1,12 @@
-\chapter{Systems of Trust}
+\chapter{Macroeconomics}
 \label{sec:macroeconomics}
 
 Bitcoin was not created in a vacuum and to understand the design of Bitcoin and by extension the Lightning Network one would
-benefit from understanding money and systems of trust. Nakamoto encoded the string "the times 03/jan/2009 chancellor on brink of second bailout for banks"~\cite{repository:bitcoin:sourceforge, bitcoin:genesis:coinbase} in the coinbase transaction of the genesis block as an alleged comment on the current banking system as well as a timestamp. He later cemented this view with multiple forum posts while he was still active~\cite{nakamoto:post:deflation, nakamoto:govern:print}.
+benefit from understanding money and systems of trust. Nakamoto encoded the string "the times 03/jan/2009 chancellor on brink of second bailout for banks"~\cite{repository:bitcoin:sourceforge, bitcoin:genesis:coinbase} in the coinbase transaction of the genesis block as an alleged comment on the current banking system as well as a timestamp. He later cemented this view with multiple forum posts while he still was active~\cite{nakamoto:post:deflation, nakamoto:govern:print}.
 
 \section{Origin of money}
 
-On the fringes of our specie's history barter became the first medium in which trade became viable, removing the risk from otherwise delayed reciprocity. It is possible for trade to be mutually beneficial as Nick Szabo so elegantly puts it:
+On the fringes of our specie's history barter became the first medium in which trade became viable, removing the risk from otherwise delayed reciprocity. It is possible for trade to be mutually beneficial as Nick Szabo so elegantly puts it,
 
 \begin{displayquote}
 
@@ -31,25 +31,25 @@ Out of commodity barter; money emerged. History has provided many peculiar forms
 	
 	\item \textbf{Uniformity}. The ability to use one unit interchangeably with another. Also referred to as \textbf{fungibility}.
 	
-	\item \textbf{Limited supply}. The ability to be scarce over time. Usually quantified by stock-to-flow. The amount of new supply in relation to already existing supply.
+	\item \textbf{Scarcity}. The ability to be scarce over time. Usually quantified by stock-to-flow. The amount of new supply in relation to already existing supply.
 	
 	\item \textbf{Acceptability}. The likelihood of being accepted in trade by others.
 \end{itemize}
 
-Many of the previous mentioned monies have expressed many of these characteristics well. Changes in these characteristics have also led to their downfall. Rai stones are carved limestone which are not native to the Yap islands, when outsiders started to bring in these on large ships it quickly changed their stock-to-flow ratio for the worst~\cite{ammous:bitcoin:standard}. Aggry beads met the same fate when Europeans, with efficient means to produce them, started to export them to West Africa. Modernized shell fishing ruined the Wampum shells function as money~\cite{szabo:shelling:out}.
+Many of the previous mentioned monies have expressed many of these characteristics well. Changes in these characteristics have also led to their downfall. Rai stones are carved limestone which are not native to the Yap islands, when outsiders started to bring in these on large ships it quickly changed their stock-to-flow ratio for the worst~\cite{ammous:bitcoin:standard}. Aggry beads met the same fate when Europeans, with efficient means to produce them, started to export them to West Africa. Similarly, modernized shell fishing ruined the Wampum shells function as money~\cite{szabo:shelling:out}.
 
 Rare metals have held these attributes since the beginning of history and in many ways still hold them today. Gold especially stands out with it's very low stock-to-flow ratio.
 
 \section{Bearer promissory notes}
 
-Although gold emerged as the commodity best suited as money it still had two major problems:
+Although gold emerged as the commodity best suited as money it still had two major problems,
 
 \begin{enumerate}
 	\item Gold is unsuitable for small transactions due to the limit in divisibility.
 	\item Gold is expensive to carry around and protect.
 \end{enumerate}
 
-Private and central banks began to issue bearer promissory notes to the owners of the underlying asset it stored(e.g. figure \ref{fig:seb:promissory:note}). 
+Private and central banks began to issue bearer promissory notes to the owners of the underlying asset it stored(e.g. Figure \ref{fig:seb:promissory:note}). 
 The asset could then be retrieved for the note on demand. The notes themselves could then be traded instead of the underlying gold. This solved both the above problems, notes are easy to carry, conceal and could be minted in very small amounts. 
 
 \begin{figure}[!htb]
@@ -59,7 +59,7 @@ The asset could then be retrieved for the note on demand. The notes themselves c
 	\caption{\textit{The private bank 'Stockholms Enskilda Bank'(SEB) issued bearer
 	promissory note. It promises to pay 10 crowns to the bearer upon demand in gold. 
 	The exchange rate as per the Scandinavian Convention(Sweden, Denmark 27 may 1873, Norway 1 april 1877)\cite{nordic:crown}
-	was 1 kilogram gold per 2480 crowns or 1 crown per 0.403g gold\cite{crown:gold}. 
+	was 1 kilogram gold per 2480 crowns or 1 crown per 0.403g gold~\cite{crown:gold}. 
  }}
 	\label{fig:seb:promissory:note}
 \end{figure}
@@ -80,7 +80,7 @@ By the late 19th century almost all major currencies was under the gold standard
 	\end{tabular}
 
 	\caption{\textit{ Major European nations periods under the gold standard
-			as composed by Ferdinand Lips\cite{lips:gold:wars} from 1975 Pickís Currency Yearbook data.
+			as composed by Ferdinand Lips~\cite{lips:gold:wars} from 1975 Pickís Currency Yearbook data.
 	}}
 	\label{tab:gold:standard}
 \end{table}
