--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -1132,6 +1132,16 @@ year = "",
 
 % Game Theory 
 
+@misc{
+	visa:fact:sheet,
+	author = {visa.com},
+	title = "Visa facts figures",
+	month = "January",
+	year = "2017",
+	linkz = "https://usa.visa.com/dam/VCOM/global/about-visa/documents/visa-facts-figures-jan-2017.pdf",
+
+}
+
 @article{
 	hamilton:behavior,
 	author = { Hamilton, William D. },   
