--- a/docs/thesis/abstract.tex
+++ b/docs/thesis/abstract.tex
@@ -2,7 +2,7 @@
 	\textbf{Abstract}
 \end{center} 
 
-In payment channel networks, such as the Bitcoin native Lightning Network, the routing nodes receive a fee as compensation for displaced liquidity, time value of money and operational costs. Currently this fee is manually set procuring sub optimal profits to the node operator. The network dynamics may be modeled as a graph and each node as an actor utilizing strategies in fee price setting, preferential attachment, timing, allocation and funding akin to Game Theoretic models. Further assuming rational actors and strategy propagation are proportional to population suggest similar methodology to Evolutionary Game Theory where a strategy's fitness will emerge as a fraction of population size. 
+In payment channel networks, such as the Bitcoin native Lightning Network, the routing nodes receive a fee as compensation for displaced liquidity, time value of money and operational costs. Currently this fee is manually set procuring sub optimal profits to the node operator. The network dynamics may be modeled as a graph and each node as an actor utilizing strategies in fee price setting, preferential attachment, timing, allocation and funding akin to game theoretic models. Further assuming rational actors and strategy propagation are proportional to population suggest similar methodology to evolutionary game theory where a strategy's fitness will emerge as a fraction of population size. 
 
 A simulation study was performed where strategies were played against each other to find emergent equilibria under competitive market pressure. Where such equilibrium may lie have further consequences for the network in form of total throughput, routing cost and robustness. This study suggest ... strategies and a robust network topology with short average paths will emerge from free competition.
 
