--- a/docs/thesis/bitcoin.tex
+++ b/docs/thesis/bitcoin.tex
@@ -25,11 +25,11 @@ Bitcoin is essentially a long ledger of inputs and outputs. Note that the whole 
 
 \section{The Double-Spending problem}
 
-While digital signatures are able prove ownership of bitcoin, there is nothing to stop the owner of an amount of bitcoin to sign two different transactions spending the same transaction output and broadcasting them to different parts of the network. This is called the double-spending problem\footnote{At least known before 1993, mentioned in multiple articles in Advances in Cryptology - CRYPTO '93 e.g brands~\cite{crypto-1993-1108}. } which is a variation of the more general Byzantine Generals Problem~\cite{lamport:shostak:byzantine:generals}.
+While digital signatures are able prove ownership of bitcoin, there is nothing to stop the owner of an amount of bitcoin to sign two different transactions spending the same transaction output and broadcasting them to different parts of the network. This is called the Double-Spending problem\footnote{At least known before 1993, mentioned in multiple articles in Advances in Cryptology - CRYPTO '93 e.g brands~\cite{crypto-1993-1108}. } which is a variation of the more general Byzantine Generals Problem~\cite{lamport:shostak:byzantine:generals}.
 
 %\subsection{Proof-of-Work}
 
-The network reaches a coherent global view over the transaction history by a method known as \textit{Proof-of-work}. The Bitcoin \textit{Proof-of-work} algorithm is very similar to that of hashcash as it uses a hash-based cost function which requires a probabilistic amount of work and the proof of the work fixed cost to verify~\cite{back:hashcash}\footnote{It's similar to hashcash in both being \gls{hash}-based with a cost function that is non-interactive, publicly auditable, trapdoor-free and have an unbounded probabilistic cost~\cite{back:hashcash}.
+The network reaches a coherent global view over the transaction history by a method known as \textit{Proof-of-work}. The Bitcoin \textit{Proof-of-work} algorithm is very similar to that of hashcash as it uses a hash-based cost function which requires a probabilistic amount of work and that the proof of the work has a fixed cost to verify~\cite{back:hashcash}\footnote{It's similar to hashcash in both being \gls{hash}-based with a cost function that is non-interactive, publicly auditable, trapdoor-free and have an unbounded probabilistic cost~\cite{back:hashcash}.
 \gls{bitcoin} uses the double \texttt{SHA256} hash function.}.
 
 The \textit{Proof-of-work} algorithm is directly tied into the bitcoin transaction history data structure composite of a chain of blocks as seen in Figure \ref{fig:blockchain}.
@@ -159,7 +159,7 @@ Converting to a P2SH transaction does two things:
 
 P2SH also allows the script to be used as an address as per BIP013~\cite{bip:0013:p2shaddr}. By simply sending to the script address one could potentially fund any type of complex transaction with no added complexity to the sender.
 
-Even though Script is not Turing complete it allows many quite advanced systems on top of it, transactions or output scripts are sometimes referred to as 'smart contracts'\footnote{First formally defined by Nick Szabo in 1994~\cite{szabo:smart:contracts}}.
+Even though Script is not Turing complete it allows many quite advanced systems on top of it, transaction output scripts are sometimes referred to as 'smart contracts'\footnote{First formally defined by Nick Szabo in 1994~\cite{szabo:smart:contracts}}.
 
 \begin{figure}[hbt!]
 	
@@ -203,6 +203,6 @@ The Lightning Network utilize many complex transactions and more will be seen in
 
 The \gls{bitcoin} network consists of \gls{node}s complying with the consensus protocol. In the beginning only the reference implementation available but with the growth of popularity others have implemented independent implementations~\cite{repository:bitcoin, repository:btcd, repository:neutrino}. For the most part,  they validate and propagate transactions and blocks.
 
-The mining component of nodes has mostly been decoupled from ordinary nodes with the advent of ASIC\footnote{Application Specific Integrated Circuit, in this case hardware that is built only to run \texttt{SHA256}.}. Mining nodes still do everything as an ordinary node does as it needs the transaction history to construct valid block. Non mining nodes validate and propagate blocks and transactions across the network. It allows some benefits in constructing transactions but mainly allows the operator to validate that the network operates as expected instead of trusting that it does.
+The mining component of nodes has mostly been decoupled from ordinary nodes with the advent of ASIC\footnote{Application Specific Integrated Circuit, in this case hardware that is built only to run \texttt{SHA256}.}. Mining nodes still do everything as an ordinary node does as it needs the transaction history to construct valid blocks. Non mining nodes validate and propagate blocks and transactions across the network. It allows some benefits in constructing transactions but mainly allows the operator to validate that the network operates as expected instead of trusting that it does.
 
 Construction of transactions does not require running a node and many bitcoin wallets do not operate as a \gls{node}.
