--- a/docs/thesis/lightning.tex
+++ b/docs/thesis/lightning.tex
@@ -1,20 +1,20 @@
 \chapter{The Lightning Network}
 \label{sec:lightning:network}
 
-The \gls{Lightning Network} is a network of micro-payment \gls{channel}s on top of the Bitcoin Network. The network was first conceived and defined in 2014~\cite{poon:dryja:lightning:network}, became viable with the segregated witness upgrade~\cite{bip:0141:segwit} and got activated through a \textit{user-activated-soft-fork} in mid 2017~\cite{bip:148:uasf:segwit}. The upgrade moves(segregates) the unlocking script(witness) from the transaction which fixes transaction malleability since multiple unlocking scripts may be valid for a single locking script. 
+The \gls{Lightning Network} is a network of micro-payment \gls{channel}s on top of the Bitcoin Network. The network was first conceived and defined in 2014~\cite{poon:dryja:lightning:network}, became viable with the segregated witness upgrade~\cite{bip:0141:segwit} and was activated through a \textit{user-activated-soft-fork} in mid 2017~\cite{bip:148:uasf:segwit}. The upgrade moves(segregates) the unlocking script(witness) from the transaction which fixes transaction malleability since multiple unlocking scripts may be valid for a single locking script. 
 
 The network protocol has been defined~\cite{repository:lightning:rfc} with four independent actors implementing protocol compliant nodes~\cite{repository:lnd, repository:eclair, repository:clightning, repository:lit}.
 
 \section{Payment channels}
 
 The Lightning Network consists of many payment channels between both routing and non-routing \gls{node}s.
-A payment channels is a essentially a transaction containing funds locked up on the bitcoin network. It requires signatures from both parties to be able to spend the transaction and cease the channel.
+A payment channel is essentially a transaction containing funds locked up on the bitcoin network. It requires signatures from both parties to be able to spend the transaction and cease the channel.
 
 Initially each party has a signed transaction splitting the funds to their original committed amount\footnote{In the RFC each channel is funded by only one party so the initial split is always all to one party.}. The parties can then agree on a different balance signing a new transaction invalidating the previous spending transaction essentially allowing for infinite transactions inside the channel without any burden on the bitcoin network.
 
 \subsection{Funding Transaction}
 
-A payment channel is funded by a funding transaction defined in the lightning paper by following steps~\cite{poon:dryja:lightning:network}:
+A payment channel is funded by a funding transaction defined in the lightning paper by following steps~\cite{poon:dryja:lightning:network},
 
 \begin{enumerate}
 	\item  Create the parent (Funding Transaction)
@@ -30,11 +30,11 @@ It is critical that the signatures of the spending transaction are exchanged bef
 
 \subsection{Commitment Transaction}
 
-In order for a channel to be useful the creation of a new commitment transaction\footnote{It may be easier to think of this type of transaction outputs as smart contracts, as in this context it's the same thing.}, updating the balance, would need to invalidate the previous one. The previous transaction is after all still a valid bitcoin transaction. This creates a problem since each party would benefit from different commitment transactions being broadcast to the network.
+In order for a channel to be useful the creation of a new commitment transaction\footnote{It may be easier to think of these types of transaction outputs as smart contracts, as in this context it's the same thing.}, updating the balance, would need to invalidate the previous one. The previous transaction is after all still a valid bitcoin transaction. This creates a problem since each party would benefit from different commitment transactions being broadcast to the network.
 
-The solution is to construct the commitment transaction similar to that of a fidelity bond where one party would be penalized if violating the agreement. In this case violation is broadcasting any but the latest commitment transactions. To be able to ascribe blame to the violating party the commitment transactions for the same channel state must be unique as otherwise one would not know which party broadcast the transaction to the network. Only uniqueness is however not enough since there is no way to enforce the penalty for violation.
+The solution is to construct the commitment transaction similar to that of a fidelity bond where one party would be penalized if violating the agreement. In this case violation is broadcasting any but the latest commitment transaction. To be able to ascribe blame to the violating party the commitment transactions for the same channel state must be unique as otherwise one would not know which party broadcast the transaction to the network. Only uniqueness is however not enough since there is no way to enforce the penalty for violation.
 
-The enforcement is possible if revocation is built into the commitment transaction, where the other party could revoke a faulty broadcast. This became possible with the addition of relative block maturity introduced with BIP68(see section \ref{sec:rlt}). The commitment transaction has two output paths, one is the other party's funds spendable immediately. The other output has two redeemable paths. Either:
+The enforcement is possible if revocation is built into the commitment transaction, where the other party could revoke a faulty broadcast. This became possible with the addition of relative block maturity introduced with BIP68(see section \ref{sec:rlt}). The commitment transaction has two outputs, one is the other party's funds spendable immediately. The other output has two redeemable paths. Either,
 
 \begin{enumerate}
 	\item The broadcasting party can spend the funds after a defined relative block time has passed. Essentially leaving time window for dispute for the violated party to enforce the penalty(Revocable delivery).
@@ -57,7 +57,7 @@ Remember that the commitment transactions is reversed for the other party. This 
 
 In order to update the channel balance a new pair of commitment transactions is created. The previous commitment transactions is invalidated by both signing a Breach Remedy Transaction(BRT) spending from their own previous commitment transactions RSMC output and handing it over to the other party. If a previous commitment transaction were to be broadcast the BRT would take precedence since the revocable delivery takes a certain amount of time before it is valid. The Breach Remedy Transaction will send all funds to the non faulty party, this is the penalty for violating the contract.
 
-It is necessary for each party to monitor the \gls{blockchain} for old commitment transactions and to broadcast the Breach Remedy Transaction in case it happens. If the Breach Remedy Transaction is not broadcast in the designated time the revocable delivery output of the previous commitment transaction will become valid and may be spent, settling the incorrect channel balance is settled and valid on the blockchain.
+It is necessary for each party to monitor the \gls{blockchain} for old commitment transactions and to broadcast the BRT in case it happens. If the BRT is not broadcast in the designated time the revocable delivery output of the previous commitment transaction will become valid and may be spent, settling the incorrect channel balance is settled and valid on the blockchain.
 
 \subsection{Alice and Bob opens a channel}
 
@@ -66,7 +66,6 @@ Alice and Bob wants to open a channel. They agree on funding the channel with \t
 Alice wants to buy a cookie from Bob for \textbf{0.2\bitcoin} and Bob agrees to sell. They each constructs new commitment transactions $CT_{A2}$, $CT_{B2}$, each with new $RSMC_{A2}$, $RSMC_{B2}$ and $SO_{B2}$, $SO_{A2}$ that reflects the new balance \textbf{0.7\bitcoin} to Bob and \textbf{0.3\bitcoin} to Alice without signing them. Before Bob can hand Alice the cookie the old $CT_{A1}$, $CT_{B1}$ is invalidated by Alice signing a $BRT_{B1}$ spending from $RSMC_{A1}$. Although Bob has nothing to gain by broadcasting $CT_{B1}$ as he would net \textbf{0.2\bitcoin} less - Bob signs $BRT_{A1}$ spending from $RSMC_{B1}$. Alice signs $CT_{B2}$ and Bob signs $CT_{A2}$. The channel balance is updated.
 
 If Alice tries to undo the cookie purchase by broadcasting $CT_{A1}$ giving \textbf{0.5\bitcoin} each. Bob simply broadcasts the $BRT_{B1}$ spending from Alice's share of the $CT_{A1}$ and Bob receives \textbf{1\bitcoin} and Alice \textbf{0\bitcoin}. 
-
 
 As long as the channel is open Alice and Bob may settle any imbalances between them with a new commitment transaction. 
 
@@ -102,7 +101,7 @@ Signing and sending $BRT$s is unnecessarily inefficient if a HD wallet is used t
 	\label{fig:RSMC}
 \end{figure}
 
-Consider a Revocable Sequence Maturity Contract seen in Figure \ref{fig:RSMC}. It is constructed by Alice and she used Bob's master public key to derive Bob's revocation public key in some prearranged manner. To invalidate the $CT$, Alice need only to disclose the private key corresponding to her revocation public key for Bob to be able to revoke a violati`([])on. 
+Consider a Revocable Sequence Maturity Contract seen in Figure \ref{fig:RSMC}. It is constructed by Alice and she used Bob's master public key to derive Bob's revocation public key in some prearranged manner. To invalidate the $CT$, Alice need only to disclose the private key corresponding to her revocation public key for Bob to be able to revoke a violation. 
 
 \subsection{Derived revocation address}
 
@@ -110,7 +109,7 @@ The 2 of 2 multi-signature clause paying out to the violated party may be implem
 
 \subsection{Closing channels}
 
-It's possible to close a channel by broadcasting either of the latest $CT$s. However the broadcasting needs to wait the designated time period, losing out on the time value of money. Instead both parties may agree to construct a new Exercise Settlement Transaction $ES$ with direct spendable outputs instead of a $RSMC$ output. Signing the $ES$ would close the channel and allowing both parities immediate access to the funds.
+It's possible to close a channel by broadcasting either of the latest $CT$s. However the broadcasting needs to wait the designated time period, losing out on the time value of money. Instead both parties may agree to construct a new Exercise Settlement Transaction($EST$) with direct spendable outputs instead of a $RSMC$ output. Signing the $EST$ would close the channel and allowing both parities immediate access to the funds.
 
 \section{Network wide payments}
 
@@ -139,7 +138,7 @@ A $HTLC$ is an extra output added to a $CT$ which enforces a payment from Alice 
 	\label{fig:HTLC}
 \end{figure}
 
-A $HTLC$ can be seen in figure \ref{fig:HTLC} and contains two validation paths. 
+A $HTLC$ can be seen in Figure \ref{fig:HTLC} and contains two validation paths. 
 
 \begin{enumerate}
 	\item If Bob has the knowledge of R that produces $H_{R}$ he can validate the first path. (Execution)
@@ -223,7 +222,7 @@ The $HTLC_{B1}$ seen in Figure \ref{fig:bob:HTLC} thus contain:
 	\item After the designated time Alice can spend the output.
 \end{enumerate}
 
-The new transactions by which both the second clauses spends to is constructed and pre-signed before the $HTLC$s is exchanged simply adds time for revocation as seen for $HTLC_{B1}$ in Figure \ref{fig:timeout:tx}.
+The new transactions by which both the second clauses spends to is constructed and pre-signed before the $HTLC$s is exchanged simply adds time for revocation as seen for $ST_{B1}$ in Figure \ref{fig:timeout:tx}.
 
 \begin{figure}[hbt!]
 	
@@ -242,14 +241,14 @@ The new transactions by which both the second clauses spends to is constructed a
 <@\texttt{\textcolor{black}{OP\_CHECKSIG}}@>
 	\end{lstlisting}
 	
-	\caption{\textit{ Showing the transaction $HTLC_{B}$ spends to, the keys are reversed for $HTLC_{A}$.
+	\caption{\textit{ Showing the transaction $ST_{B}$ spends to, the keys are reversed for $ST_{A}$.
 	}}
 	\label{fig:timeout:tx}
 \end{figure}
 
-A $HTLC$ is terminated off-chain by creating a new commitment transaction, without $HTLC$ outputs, reflecting new the balance state as both parties knows what would transpire if the transaction were broadcast. In the creation of the new $CT$ both parties disclose the both the private keys corresponding to the two revocation outputs as a penalty if and old $CT$ were broadcast. Hence most transactions will be kept off chain and only held in case of an uncooperative party.
+A $HTLC$ is terminated off-chain by creating a new commitment transaction, without $HTLC$ outputs, reflecting new the balance state as both parties knows what would transpire if the transaction were broadcast. In the creation of the new $CT$ both parties disclose both private keys corresponding to the two revocation outputs as a penalty if an old $CT$ were broadcast. Hence most transactions will be kept off chain and only held in case of an uncooperative party.
 
-In this manner Hashed Timelock Contracts may be used without the need for either of the channel parties to trust one another.
+In this manner Hashed Timelock Contracts may be used without the need for either of the channel parties to trust each other.
 
 Note that key generation and disclosure may be used for $HTLC$ in the same manner previously disused in section \ref{sec:hdw}.
 
@@ -291,7 +290,7 @@ Alice wants to pay David but have no direct path to Carol. She finds a route via
 \end{figure}
 
 Alice and David agree on size of the payment and David constructs R and shares $H_{R}$ with Alice. Alice then uses $H_{R}$ to construct a $HTLC_{1}$.
-After Alice has created $HTLC_{1}$ with $TL_{1}$, Bob is comfortable creating $HTLC_{2}$ with a $TL_{2}$ < $TL_{1}$ as the only way Carol could redeem $HTLC_{2}$ is by disclosing R to Bob. Bob in turn may then disclose R to Alice and redeem $HTLC_{1}$. If the timelocks were improperly set as $TL_{2}$ > $TL_{1}$ the $HTLC_{1}$ may be invalid by the time Carol redeem $HTLC_{2}$ leaving Bob paying Carol but without getting payed by Alice. [RFC source of actual time step here?]
+After Alice has created $HTLC_{1}$ with $TL_{1}$, Bob is comfortable creating $HTLC_{2}$ with a $TL_{2}$ < $TL_{1}$ as the only way Carol could redeem $HTLC_{2}$ is by disclosing R to Bob. Bob in turn may then disclose R to Alice and redeem $HTLC_{1}$. If the timelocks were improperly set as $TL_{2}$ > $TL_{1}$ the $HTLC_{1}$ may be invalid by the time Carol redeem $HTLC_{2}$ leaving Bob paying Carol but without getting payed by Alice.
 
 \section{Routing fee}
 
