--- a/docs/thesis/problem.tex
+++ b/docs/thesis/problem.tex
@@ -5,7 +5,7 @@
 
 Cinnober is a provider of IT solutions to the infrastructure providers of the global financial industry, including exchanges and clearing houses. Cinnober has solutions from price discovery, trading, clearing to settlement of financial securities.
 
-\gls{bitcoin} is a peer-to-peer electronic cash system~\cite{nakamoto:bitcoin}. The decentralized nature of the system limits the verification to the weakest node - consequently limiting the transaction capacity. 
+\gls{bitcoin} is a peer-to-peer electronic cash system~\cite{nakamoto:bitcoin}. The decentralized nature of the system limits the performance to the weakest node - consequently limiting the transaction capacity. 
 
 Multiple solutions to reduce the burden on the Bitcoin nodes have been suggested~\cite{decker:wattenhofer:duplex, decker:russell:Osuntokun:eltoo, poon:dryja:lightning:network, blockstream:sidechain}. Where the solution receiving most attention is the \gls{Lightning Network} relying on payment channels.
 
@@ -13,7 +13,7 @@ In a payment channel, bitcoin is committed by a Bitcoin transaction and locked u
 
 Many payment channels can be aggregated into a network. There is an ongoing effort to build such a network named The Lightning Network. Where a party without a direct channel to another party could route through multiple channels if enough liquidity exists between them. If such a scheme becomes viable in practice;  only a small fraction of all transactions would need to be settled on the Bitcoin blockchain. Thus increasing the capacity significantly.
 
-How the routing nodes should operate is still vastly unexplored. The node provides liquidity to payment and procures fees whenever his channels are used in a payment route. It is likely that a market for liquid channels will emerge, however strategically well allocated liquidity may earn much more than poorly allocated liquidity. The nodes may chose who to open channels with, what fee to set, how much liquidity should be locked up on each channel and when to re-balance channels.
+How the routing nodes should operate is still vastly unexplored. The node provides liquidity to allow routing payments and procures fees whenever the channels are used in a payment route. It is likely that a market for liquid channels will emerge, however strategically well allocated liquidity may earn much more than poorly allocated liquidity. The nodes may chose who to open channels with, what fee to set, how much liquidity should be locked up on each channel and when to re-balance channels.
 
 A simulation environment was implemented, along with operational strategies. The strategies were then combined and simulated to see how well they perform against each other.
 
@@ -43,7 +43,7 @@ This thesis aims to address following two questions:
 	
 	As the Lightning Network is indeed a network and many problems are yet another incarnation of already solved graph problems. A nodes position in a network has been studied and specifically the measurement of Betweenness Centrality, as introduced by Freeman in 1977~\cite{brandes:betweenness:centrality:algorithm}, lays a sound basis for fee estimation. Calculating paths in graphs are as old as the computing field itself with Floyd-Warshall, Johnson~\cite{johnson:shortest:path:sparse:network} and Dijkstras algorithms all being appropriate here. The attributes of the network as strategies emerge have consequences on throughput and robustness have also been researched in the field of topology. Especially that of scale free networks by Barabasi and Albert~\cite{barabasi:albert:emergent:scaling} is of concern here.
 	
-	Emergence of equilibria as the product of strategies of competing actors is neither new or rare in the fields of evolutionary biology nor Economics. Ideas as the Standard Price Theory, Evolutionary Stable Strategies and more widely Game Theory has aided in the formulation of the thesis and construction of the simulations.
+	Emergence of equilibria as the product of strategies of competing actors is neither new or rare in the fields of evolutionary biology nor economics. Ideas as the Standard Price Theory, Evolutionary Stable Strategies and more widely game theory has aided in the formulation of the thesis and construction of the simulations.
 	
 	Lastly, \gls{bitcoin} and off-chain proposals have opened a plethora of possible research topics in which plentiful are ongoing and active.  
 	
@@ -58,7 +58,7 @@ This thesis is divided into eight chapters, including this one. The first three 
 \begin{enumerate}
 	\item \textbf{Introduction} introduces the thesis.
 	\item \textbf{Macroeconomics} gives a wide background to currencies and systems built on trust. 
-	\item \textbf{The Bitcoin Network} chapter introduces the basic \gls{bitcoin} architecture and answers how trust is solved and describes Bitcoin script as it allows further development no top of the base protocol.
+	\item \textbf{The Bitcoin Network} chapter introduces the basic \gls{bitcoin} architecture, answers how trust is solved and describes Bitcoin script as it allows further development no top of the base protocol.
 	\item \textbf{Scaling Bitcoin} describes historical attempts to scale Bitcoin and the merit of a wide array of scaling solutions.
 	\item \textbf{The \gls{Lightning Network}} chapter introduces the most fundamental parts of the Lightning Network protocol.
 	\item \textbf{Evaluation} reduces the Lightning Network to a manageable problem set, formulates strategies and measurements and suggests how these strategies may be evaluated.
